# job_search_application

./: .coverage  .gitignore  README.md  config.py  main.py  pyproject.toml
data/: vacancy.json
src/: JSONSaver.py  api.py  utils.py  vacancy.py
tests/: conftest.py  test_JSONSaver.py  test_api.py  test_vacancy.py  tests_utils.py
